Enhancement of target url

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ ENV=staging
 BROWSER=chrome
 HEADLESS=false
 BASE_URL=https://bookslot-staging.centerforvein.com
+TARGET_URL=https://bookslot-staging.centerforvein.com/?istestrecord=1
 REAL_PROFILE=true
 PROFILE_DIR=Default
 
