--- a/.env
+++ b/.env
@@ -3,7 +3,6 @@ ENABLE_AI=true
 #OPENAI_API_KEY=key
 
 
-
 ENV=staging
 BROWSER=chrome
 HEADLESS=false
@@ -15,3 +14,5 @@ PROFILE_DIR=Default
 SCREENSHOT_ON_FAIL=true
 #RECORD_VIDEO=true  # Optional, true to enable full session recording
 AUTO_SCREENSHOT=true
+
+EXECUTION_MODE=manual  # Options: manual, ai
