--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 # .env
 ENABLE_AI=true
-
 OPENAI_API_KEY=
-
 ENV=staging
 BROWSER=chrome
 HEADLESS=false
@@ -10,9 +8,7 @@ BASE_URL=https://bookslot-staging.centerforvein.com
 TARGET_URL=https://bookslot-staging.centerforvein.com/?istestrecord=1
 REAL_PROFILE=true
 PROFILE_DIR=Default
-
 SCREENSHOT_ON_FAIL=true
-#RECORD_VIDEO=true  # Optional, true to enable full session recording
+RECORD_VIDEO=true  # Optional, true to enable full session recording
 AUTO_SCREENSHOT=true
-
 EXECUTION_MODE=manual  # Options: manual, ai
